--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,1 @@
-.page-top{text-align:center;margin-bottom:50px}.tracker-datepicker{width:300px;margin:0 auto}
+.page-top{text-align:center;margin-bottom:50px}.tracker-datepicker{width:300px;margin:0 auto}.semi-bold-18{font-size:18px;font-weight:600}
